--- a/NetCDF-regridding/create_netcdf_grid.ipynb
+++ b/NetCDF-regridding/create_netcdf_grid.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -75,8 +75,28 @@
    },
    "outputs": [],
    "source": [
-    "create_grid(\"newgridfine.nc\", lonnew, latnew)"
+    "create_grid(\"data/newgridfine.nc\", lonnew, latnew)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "create_grid(\"data/new_baltic_grid.nc\", np.arange(9., 32., 1.), np.arange(53., 67., 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
