--- a/NetCDF-regridding/netCDF-regrid.ipynb
+++ b/NetCDF-regridding/netCDF-regrid.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,24 @@
    ],
    "source": [
     "which ESMF_RegridWeightGen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "otherwise add it to your path:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "export PATH=${PATH}:/home/user/esmf/bin/binO/Linux.gfortran.64.mpiuni.default/"
    ]
   },
   {
@@ -308,7 +326,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ncdiff ./output/regrid_output.nc ./data/regrid_output_ref.nc ./output/output_diff.nc"
