--- a/CMEMS_INSTAC/1-read_CMEMS_indexfile.ipynb
+++ b/CMEMS_INSTAC/1-read_CMEMS_indexfile.ipynb
@@ -12,6 +12,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "import matplotlib.cbook\n",
+    "warnings.filterwarnings(\"ignore\",category=matplotlib.cbook.mplDeprecation)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -48,13 +64,13 @@
     }
    },
    "source": [
-    "If you have an account in Copernicus Marine Service, you can download a new file.<br>\n",
+    "If you have an account in Copernicus Marine Environment Monitoring Service ([CMEMS](http://marine.copernicus.eu/)), you can download a new file.<br>\n",
     "Otherwise use the file provided in the *data* directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -96,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 106,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
