--- a/CMEMS_INSTAC/read_CMEMS_indexfile.ipynb
+++ b/CMEMS_INSTAC/read_CMEMS_indexfile.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 1: read index file from Copernicus Marine Service - In situ"
+    "# Exercise 3: read index file from Copernicus Marine Service - In situ"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Index file"
+    "## 3.1 Index file"
    ]
   },
   {
@@ -33,7 +33,9 @@
    "metadata": {},
    "source": [
     "If you have an account in Copernicus Marine Environment Monitoring Service, you can download a new file.<br>\n",
-    "Otherwise use the file provided in the *data* directory."
+    "Otherwise use the file provided in the *data* directory.\n",
+    "\n",
+    "**Edit the next cell to indicate the path to the file**"
    ]
   },
   {
@@ -44,14 +46,14 @@
    },
    "outputs": [],
    "source": [
-    "indexfile = \"./index_latest.txt\""
+    "indexfile = \" \""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read the fields from the file."
+    "## 3.2 Read the fields from the file."
    ]
   },
   {
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -80,13 +82,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "np.genfromtxt?"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple plot"
+    "## 3.3 Simple plot"
    ]
   },
   {
@@ -108,6 +112,60 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.4 Plot usint Basemap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.basemap import Basemap\n",
+    "m = Basemap(projection=\"merc\",\n",
+    "                llcrnrlon=5, llcrnrlat=54,\n",
+    "                urcrnrlon=30, urcrnrlat=66,\n",
+    "                lat_ts=60, resolution='i')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5 Find the closest data point to Hamburg (but in the Baltic ;)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You need to use the coordinates from the index file."
    ]
   },
   {
