--- a/CMEMS_INSTAC/slides_insitu.ipynb
+++ b/CMEMS_INSTAC/slides_insitu.ipynb
@@ -114,6 +114,7 @@
    "cell_type": "code",
    "execution_count": 111,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -230,6 +231,7 @@
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -254,6 +256,7 @@
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
