--- a/NetCDF-regridding/netCDF-regrid.ipynb
+++ b/NetCDF-regridding/netCDF-regrid.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":/usr/local/lib\n"
+      "\n"
      ]
     }
    ],
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":/usr/local/lib:/usr/local/lib\n"
+      ":/usr/local/lib\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -144,14 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "regrid_input.nc  regrid_newgrid.nc  regrid_output_ref.nc\n"
+      "dataset-bal-analysis-forecast-phy-dailymeans_1516800049023.nc\n",
+      "new_baltic_grid.nc\n",
+      "regrid_input.nc\n",
+      "regrid_newgrid.nc\n",
+      "regrid_output_ref.nc\n"
      ]
     }
    ],
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +187,7 @@
       "\n",
       "calculating min and maxes for analyzed_field...\n",
       "XIO:  fatal IO error 11 (Resource temporarily unavailable) on X server \":0\"\n",
-      "      after 885 requests (885 known processed) with 0 events remaining.\n"
+      "      after 914 requests (914 known processed) with 0 events remaining.\n"
      ]
     },
     {
@@ -212,7 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mkdir -pv output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,9 +239,8 @@
     }
    ],
    "source": [
-    "mkdir -pv output\n",
-    "cp ./data/regrid_input.nc ./output/regrid_input_latlon.nc\n",
-    "ncrename -d x,lon -v x,lon -d y,lat -v y,lat ./output/regrid_input_latlon.nc"
+    "cp ./data/input.nc ./output/input_latlon.nc\n",
+    "ncrename -d x,lon -v x,lon -d y,lat -v y,lat ./output/input_latlon.nc"
    ]
   },
   {
@@ -239,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,9 +261,9 @@
      "output_type": "stream",
      "text": [
       "Input #00: ./output/regrid_input_latlon.nc\n",
-      "Grid(src): /tmp/ncremap_tmp_grd_src.nc.pid10526\n",
-      "Grid(dst): /tmp/ncremap_tmp_grd_dst.nc.pid10526\n",
-      "Map/Wgt  : /tmp/ncremap_tmp_map_esmf_bilinear.nc.pid10526\n",
+      "Grid(src): /tmp/ncremap_tmp_grd_src.nc.pid14241\n",
+      "Grid(dst): /tmp/ncremap_tmp_grd_dst.nc.pid14241\n",
+      "Map/Wgt  : /tmp/ncremap_tmp_map_esmf_bilinear.nc.pid14241\n",
       "Regridded: ./output/regrid_output.nc\n"
      ]
     }
@@ -267,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -410,8 +424,9 @@
       "Ncview comes with ABSOLUTELY NO WARRANTY; for details type `ncview -w'.\n",
       "This is free software licensed under the Gnu General Public License version 3; type `ncview -c' for redistribution details.\n",
       "\n",
+      "calculating min and maxes for analyzed_field...\n",
       "XIO:  fatal IO error 11 (Resource temporarily unavailable) on X server \":0\"\n",
-      "      after 686 requests (686 known processed) with 0 events remaining.\n"
+      "      after 1049 requests (1049 known processed) with 0 events remaining.\n"
      ]
     },
     {
@@ -424,9 +439,19 @@
    "source": [
     "ncview output/regrid_output.nc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Bash",
    "language": "bash",
