--- a/CMEMS_INSTAC/read_CMEMS_indexfile.ipynb
+++ b/CMEMS_INSTAC/read_CMEMS_indexfile.ipynb
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4 Plot usint Basemap"
+    "## 3.4 Plot using Basemap"
    ]
   },
   {
