--- a/CMEMS_INSTAC/slides_insitu.ipynb
+++ b/CMEMS_INSTAC/slides_insitu.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting notebooks to slides\n",
+    "This notebook is configured to create a *slideshow* (View > Cell Toolbar > Slideshow). \n",
+    "## Local\n",
+    "If you want to generate the slideshow locally, open a bash terminal, go in the current directory and type: \n",
+    "`jupyter nbconvert slides_insitu.ipynb --to slides --post serve`.<br>\n",
+    "If everything goes well, a new tab will open in your browser.\n",
+    "## Remote\n",
+    "If you want to share your presentation, \n",
+    "1. Make the ipynb file public, for example using GitHub,\n",
+    "2. Copy the URL into http://nbviewer.jupyter.org/\n",
+    "3. Click on the third icon in the top-right corner (just after FAQ).<br>\n",
+    "If everything goes well, the slideshow presentation is starting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -560,15 +578,6 @@
     "    folium.Marker(location=[lat, lon], icon=None).add_to(marker_cluster)\n",
     "map2"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
