re-run notebooks

--- a/NetCDF-regridding/netCDF-regrid.ipynb
+++ b/NetCDF-regridding/netCDF-regrid.ipynb
@@ -116,12 +116,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "otherwise add it to your path:"
+    "If the previous cell execution don't provide any result, find the directory where `ESMF_RegridWeightGen` is located and add this directory to your path, for example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -144,18 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dataset-bal-analysis-forecast-phy-dailymeans_1516800049023.nc\n",
-      "new_baltic_grid.nc\n",
-      "regrid_input.nc\n",
-      "regrid_newgrid.nc\n",
-      "regrid_output_ref.nc\n"
+      "new_baltic_grid.nc  regrid_input.nc  regrid_newgrid.nc  regrid_output_ref.nc\n"
      ]
     }
    ],
@@ -172,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,9 +181,8 @@
       "Ncview comes with ABSOLUTELY NO WARRANTY; for details type `ncview -w'.\n",
       "This is free software licensed under the Gnu General Public License version 3; type `ncview -c' for redistribution details.\n",
       "\n",
-      "calculating min and maxes for analyzed_field...\n",
       "XIO:  fatal IO error 11 (Resource temporarily unavailable) on X server \":0\"\n",
-      "      after 914 requests (914 known processed) with 0 events remaining.\n"
+      "      after 656 requests (656 known processed) with 0 events remaining.\n"
      ]
     },
     {
@@ -216,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -239,8 +234,8 @@
     }
    ],
    "source": [
-    "cp ./data/input.nc ./output/input_latlon.nc\n",
-    "ncrename -d x,lon -v x,lon -d y,lat -v y,lat ./output/input_latlon.nc"
+    "cp ./data/regrid_input.nc ./output/regrid_input_latlon.nc\n",
+    "ncrename -d x,lon -v x,lon -d y,lat -v y,lat ./output/regrid_input_latlon.nc"
    ]
   },
   {
@@ -261,9 +256,9 @@
      "output_type": "stream",
      "text": [
       "Input #00: ./output/regrid_input_latlon.nc\n",
-      "Grid(src): /tmp/ncremap_tmp_grd_src.nc.pid14241\n",
-      "Grid(dst): /tmp/ncremap_tmp_grd_dst.nc.pid14241\n",
-      "Map/Wgt  : /tmp/ncremap_tmp_map_esmf_bilinear.nc.pid14241\n",
+      "Grid(src): /tmp/ncremap_tmp_grd_src.nc.pid11086\n",
+      "Grid(dst): /tmp/ncremap_tmp_grd_dst.nc.pid11086\n",
+      "Map/Wgt  : /tmp/ncremap_tmp_map_esmf_bilinear.nc.pid11086\n",
       "Regridded: ./output/regrid_output.nc\n"
      ]
     }
@@ -339,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -358,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -439,15 +434,6 @@
    "source": [
     "ncview output/regrid_output.nc"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
